--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,27 @@
     transform: translateY(20px);
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
   }
+
+  .mobile-price-card .card-subtitle {
+    min-height: 40px; /* Altura mínima para acomodar duas linhas de texto */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .mobile-price-card .card-text {
+    flex-grow: 1; /* Faz com que este elemento ocupe todo o espaço disponível */
+  }
+  
+  .mobile-price-card .mobile-btn {
+    margin-top: auto; /* Empurra o botão para o final do card */
+  }
+
+  .mobile-price-card .card-body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
   
   .visible {
     opacity: 1;
